# Auto-Transcript-Agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TROUBLESHOOTING.md  com.user.autotranscript.plist  pyproject.toml  setup.py
scripts/: install_service.py
src/: __init__.py  config.py  monitor.py  transcriber.py  transcript_service.py
tests/: __init__.py  test_config.py  test_config_extended.py  test_coverage_focused.py  test_final_coverage.py  test_monitor.py  test_monitor_extended.py  test_transcriber.py  test_transcriber_extended.py  test_transcript_service.py  test_transcript_service_extended.py
